User icon alignment fix

--- a/public/css/sass/commons/_nav-bar.scss
+++ b/public/css/sass/commons/_nav-bar.scss
@@ -347,7 +347,7 @@ header {
 
     .ui-user-top-image {
         float: right;
-        margin: 0 20px;
+        margin: 0 10px;
        /* margin-left: 10px;
         margin-right: 20px;*/
         cursor: pointer;
